2007-03-11  Brandon Hale  <brandon@brandonhale.us>
	
	* src/TrayIcon.cs:
	Don't ellipsize artist name in tooltip, bug #411930.

2007-03-01  Brandon Hale  <brandon@brandonhale.us>

	* liblast-exit/:
	Un-bundle libsexy. Change p/invokes to liblast-exit to system
	version of libsexy and require 0.1.7 in configure.

2007-02-24  Iain Holmes  <iain@gnome.org>

	* Applied patch from Sebastian Dröge to allow linking against dbus
	assemblies. Fixes #409970

2007-02-15  Brandon Hale  <brandon@brandonhale.us>

	* src/Driver.cs, src/TrayIcon.cs, po/POTFILES.in:
	Patch from Lukasz Jernas on bug #399380, i18n for tray icon

2007-02-09  Brandon Hale  <brandon@ubuntu.com>

	* src/dbus-sharp:
	Update bundled dbus-sharp to 0.4.0, dbus-sharp-glib to 0.3.0.

2007-02-04  Brandon Hale  <brandon@ubuntu.com>

	* src/VolumeButton.cs, src/PlayerWindow.cs:
	Update the volume widget from Aaron, set the relief to normal

2007-02-03  Brandon Hale  <brandon@ubuntu.com>

	* src/VolumeButton.cs, src/PlayerWindow.cs:
	Use new volume widget from Aaron Bockover, ported
	to Gtk# from libbacon. This allows you to click and drag
	the volume.

2007-01-25  Priit Laes  <plaes@svn.gnome.org>

	* dbus-sharp/Makefile.am: Make NDesk.DBus.GLib.dll depend on
	NDesk.DBus.dll. This fixes parallel builds, bug #400368.

2007-01-22  Brandon Hale  <brandon@ubuntu.com>
	
	* po/de.po, configure.ac:
	Add German translation by Sebastian Droege

2007-01-20  Johan Svedberg  <johans@gnome.org>

	* src/FindStation.cs:
	Added RowActivated handler for the tags treeview which changes
	to the selected station.

2007-01-20  Brandon Hale  <brandon@ubuntu.com>

	* po/sv.po:
	Add Swedish translation from Daniel Nylander
	* configure.ac:
	Add "sv" to ALL_LINGUAS

2007-01-15  Iain Holmes  <iain@gnome.org>

	* src/PlayerWindow.cs: Patch from Łukasz Jernaś to fix icons in a
	custom prefix.

2007-01-13  Brandon Hale  <brandon@ubuntu.com>
	
	* NEWS, configure.ac: Updated for Last Exit 4

2007-01-10  Brandon Hale  <brandon@ubuntu.com>
